[package]
name = "active_oberon_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
build-time = "0.1.3"
clap = { version = "4.0", features = ["derive"] }
console = "0.15.7"
matches = { version = "0.1.10", features = [] }

